--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -35,5 +42,7 @@ dependencies {
     compile files('libs/Parse-1.9.4.jar')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile "com.github.eugene-petriyov:CardStackView:1.6"
+    compile 'com.google.dagger:dagger:2.15'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
     testCompile 'junit:junit:4.12'
 }
