added ShareHelper for sharing added bold title replaced single quote with double one show message popup on refresh button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,16 @@
 
         <service android:name="com.parse.PushService" />
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.getinfocia.infocia.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <receiver
             android:name=".push.CustomPushReceiver"
             android:exported="false">
